cluster/apps/home/otbr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otbr
  namespace: home
  labels:
    app: otbr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: otbr
  template:
    metadata:
      labels:
        app: otbr
      annotations:
        container.apparmor.security.beta.kubernetes.io/otbr: unconfined
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
        - name: otbr
          image: docker.io/bnutzer/otbr-tcp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: rest
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8081
            failureThreshold: 3
            timeoutSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8081
            failureThreshold: 3
            timeoutSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: data
              mountPath: /var/lib/thread
            - name: tun
              mountPath: /dev/net/tun
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: otbr-data
        - name: tun
          hostPath:
            path: /dev/net/tun
