cluster/apps/home/otbr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otbr
  namespace: home
  annotations:
    lbipam.cilium.io/ips: 192.168.3.64
spec:
  type: LoadBalancer
  selector:
    app: otbr
  ports:
    - name: rest
      port: 8081
      protocol: TCP
      targetPort: 8081
